<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_device_address"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/device_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_state"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/connection_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disconnected"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#00f0e0"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_data"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/data_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="0dp"
            android:text="hex收" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/rx_data_id_1"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:enabled="true"
            android:focusable="false"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:minLines="5"
            android:scrollbars="vertical"
            android:textSize="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="0dp"
        android:background="#00f0e0"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TXD"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="25dp"
            android:text="hex发" />

        <CheckBox
            android:id="@+id/checkBox1_tc_send"
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_marginLeft="40dp"
            android:text="连续发"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/tx_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:textSize="11sp" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00f0e0"
            android:text="以上部份为普通 APP透传功能，一般客户需要使用APP透传数据的话，请使用以上串口中功能"
            android:textSize="11dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/tx_button"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginLeft="50dp"
            android:text="发送"
            android:textSize="10sp" />

        <Button
            android:id="@+id/clear_button"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginLeft="50dp"
            android:text="清除"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="10dp"
        android:background="#f00000"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="以下为MESH（串口透传、IO、PWM、LED灯、支持一对多，多对一，多对多通信"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/mesh_tx_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:textSize="11sp" >
        </EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="注意请输入十六进制数据,mesh串口透传时，最大输入字节为10字节"
            android:textSize="10sp"
            android:textColor="#ff0000"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="发送Mesh串口数据"
            android:id="@+id/mesh_usrt_send_button"
            android:textSize="11dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="发送Mesh控制数据"
            android:id="@+id/mesh_fc_send_button"
            android:textSize="11dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="IO广播"
            android:layout_marginLeft="10dp"
            android:textSize="12sp" />
        <ToggleButton
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:id="@+id/mesh_io_button"
            android:text="ToggleButton" />
        
    </LinearLayout>

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="2dp"
        android:background="#f00000"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="以下为MESH LED灯工作模式, 需要串口发送AT+CLSSB1配置成LED灯模式"
            android:textSize="12sp" />
    </LinearLayout>
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="2dp"
       
        android:orientation="horizontal" >

<Button
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:text="红"
    android:id="@+id/mesh_led_button1"
    android:background="#ff0000"
     />
        
<Button
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:text="绿"
    android:layout_marginLeft="2dp"
    android:background="#00ff00"
    android:id="@+id/mesh_led_button2"
     />

<Button
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:text="蓝"
    android:layout_marginLeft="2dp"
    android:background="#0000ff"
    android:id="@+id/mesh_led_button3"
     />

<Button
    android:layout_width="60dp"
    android:layout_height="50dp"
    android:text="红渐变"
    android:layout_marginLeft="2dp"
    android:background="#ff0000"
    android:id="@+id/mesh_led_button4"
     />
        
<Button
    android:layout_width="60dp"
    android:layout_height="50dp"
    android:text="绿渐变"
    android:layout_marginLeft="2dp"
    android:background="#00ff00"
    android:id="@+id/mesh_led_button5"
     />

<Button
    android:layout_width="60dp"
    android:layout_height="50dp"
    android:text="蓝渐变"
    android:layout_marginLeft="2dp"
    android:background="#0000ff"
    android:id="@+id/mesh_led_button6"
     />





    </LinearLayout>
    
    
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="5dp"
       
        android:orientation="horizontal" >

<Button
    android:layout_width="70dp"
    android:layout_height="50dp"
    android:text="7色跳变"
    android:id="@+id/mesh_led_button7"
    android:background="#ffffff"
     />
        
<Button
    android:layout_width="70dp"
    android:layout_height="50dp"
    android:text="7色渐变"
    android:layout_marginLeft="2dp"
    android:id="@+id/mesh_led_button8"
    android:background="#ffffff"
     />

<Button
    android:layout_width="70dp"
    android:layout_height="50dp"
    android:text="7色频闪"
    android:layout_marginLeft="2dp"
    android:id="@+id/mesh_led_button9"
    android:background="#ffffff"
     />

<Button
    android:layout_width="60dp"
    android:layout_height="50dp"
    android:text="LED关"
    android:layout_marginLeft="2dp"
    android:id="@+id/mesh_led_button10"
    android:background="#dddddd"
     />
        
<Button
    android:layout_width="60dp"
    android:layout_height="50dp"
    android:text="LED开"
    android:layout_marginLeft="2dp"
    android:id="@+id/mesh_led_button11"
    android:background="#dddddd"
     />


    </LinearLayout>
    
    
        <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="亮度" />

        <SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginRight="10dp"
            />
    </LinearLayout>
    
    
        <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="速度" />

        <SeekBar
            android:id="@+id/seekBar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginRight="10dp"
            />
    </LinearLayout>
        
        
        <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="白光" />

        <SeekBar
            android:id="@+id/seekBar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginRight="10dp"
            />
    </LinearLayout>
        
        
        
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal" >

    </LinearLayout>

</LinearLayout>